Debugging LDAP query and container

--- a/mattermost-ldap.yaml
+++ b/mattermost-ldap.yaml
@@ -111,4 +111,4 @@ spec:
         readinessProbe:
           httpGet:
             port: http
-            path: /
+            path: /oauth/index.php
